Common eklendi ,Seed hazır hale geldi

--- a/MyBlok.DAL/MyBlok.DAL.csproj
+++ b/MyBlok.DAL/MyBlok.DAL.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MyBlok.Common\MyBlok.Common.csproj" />
     <ProjectReference Include="..\MyBlok.Domain\MyBlok.Domain.csproj" />
   </ItemGroup>
 
